# go/internal/openapi/model_create_webhook.go
@@ -1,0 +1,310 @@
+/*
+ * Wallet OpenAPI Documentation
+ *
+ * This is a custody wallet service openapi server.
+ *
+ * API version: 1.0
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// CreateWebhook struct for CreateWebhook
+type CreateWebhook struct {
+	// The description of the webhook
+	Description *string `json:"description,omitempty"`
+	// The disabled of the webhook
+	Disabled *bool `json:"disabled,omitempty"`
+	// The event types of the webhook
+	EventTypes []EventType `json:"eventTypes"`
+	// The headers of the webhook
+	Headers map[string]string `json:"headers"`
+	// The metadata of the webhook
+	Metadata map[string]interface{} `json:"metadata"`
+	// The uid of the webhook
+	Uid *string `json:"uid,omitempty"`
+	// The url of the webhook
+	Url string `json:"url"`
+}
+
+// NewCreateWebhook instantiates a new CreateWebhook object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewCreateWebhook(eventTypes []EventType, headers map[string]string, metadata map[string]interface{}, url string) *CreateWebhook {
+	this := CreateWebhook{}
+	this.EventTypes = eventTypes
+	this.Headers = headers
+	this.Metadata = metadata
+	this.Url = url
+	return &this
+}
+
+// NewCreateWebhookWithDefaults instantiates a new CreateWebhook object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewCreateWebhookWithDefaults() *CreateWebhook {
+	this := CreateWebhook{}
+	return &this
+}
+
+// GetDescription returns the Description field value if set, zero value otherwise.
+func (o *CreateWebhook) GetDescription() string {
+	if o == nil || o.Description == nil {
+		var ret string
+		return ret
+	}
+	return *o.Description
+}
+
+// GetDescriptionOk returns a tuple with the Description field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *CreateWebhook) GetDescriptionOk() (*string, bool) {
+	if o == nil || o.Description == nil {
+		return nil, false
+	}
+	return o.Description, true
+}
+
+// HasDescription returns a boolean if a field has been set.
+func (o *CreateWebhook) HasDescription() bool {
+	if o != nil && o.Description != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetDescription gets a reference to the given string and assigns it to the Description field.
+func (o *CreateWebhook) SetDescription(v string) {
+	o.Description = &v
+}
+
+// GetDisabled returns the Disabled field value if set, zero value otherwise.
+func (o *CreateWebhook) GetDisabled() bool {
+	if o == nil || o.Disabled == nil {
+		var ret bool
+		return ret
+	}
+	return *o.Disabled
+}
+
+// GetDisabledOk returns a tuple with the Disabled field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *CreateWebhook) GetDisabledOk() (*bool, bool) {
+	if o == nil || o.Disabled == nil {
+		return nil, false
+	}
+	return o.Disabled, true
+}
+
+// HasDisabled returns a boolean if a field has been set.
+func (o *CreateWebhook) HasDisabled() bool {
+	if o != nil && o.Disabled != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetDisabled gets a reference to the given bool and assigns it to the Disabled field.
+func (o *CreateWebhook) SetDisabled(v bool) {
+	o.Disabled = &v
+}
+
+// GetEventTypes returns the EventTypes field value
+func (o *CreateWebhook) GetEventTypes() []EventType {
+	if o == nil {
+		var ret []EventType
+		return ret
+	}
+
+	return o.EventTypes
+}
+
+// GetEventTypesOk returns a tuple with the EventTypes field value
+// and a boolean to check if the value has been set.
+func (o *CreateWebhook) GetEventTypesOk() (*[]EventType, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.EventTypes, true
+}
+
+// SetEventTypes sets field value
+func (o *CreateWebhook) SetEventTypes(v []EventType) {
+	o.EventTypes = v
+}
+
+// GetHeaders returns the Headers field value
+func (o *CreateWebhook) GetHeaders() map[string]string {
+	if o == nil {
+		var ret map[string]string
+		return ret
+	}
+
+	return o.Headers
+}
+
+// GetHeadersOk returns a tuple with the Headers field value
+// and a boolean to check if the value has been set.
+func (o *CreateWebhook) GetHeadersOk() (*map[string]string, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.Headers, true
+}
+
+// SetHeaders sets field value
+func (o *CreateWebhook) SetHeaders(v map[string]string) {
+	o.Headers = v
+}
+
+// GetMetadata returns the Metadata field value
+func (o *CreateWebhook) GetMetadata() map[string]interface{} {
+	if o == nil {
+		var ret map[string]interface{}
+		return ret
+	}
+
+	return o.Metadata
+}
+
+// GetMetadataOk returns a tuple with the Metadata field value
+// and a boolean to check if the value has been set.
+func (o *CreateWebhook) GetMetadataOk() (*map[string]interface{}, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.Metadata, true
+}
+
+// SetMetadata sets field value
+func (o *CreateWebhook) SetMetadata(v map[string]interface{}) {
+	o.Metadata = v
+}
+
+// GetUid returns the Uid field value if set, zero value otherwise.
+func (o *CreateWebhook) GetUid() string {
+	if o == nil || o.Uid == nil {
+		var ret string
+		return ret
+	}
+	return *o.Uid
+}
+
+// GetUidOk returns a tuple with the Uid field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *CreateWebhook) GetUidOk() (*string, bool) {
+	if o == nil || o.Uid == nil {
+		return nil, false
+	}
+	return o.Uid, true
+}
+
+// HasUid returns a boolean if a field has been set.
+func (o *CreateWebhook) HasUid() bool {
+	if o != nil && o.Uid != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetUid gets a reference to the given string and assigns it to the Uid field.
+func (o *CreateWebhook) SetUid(v string) {
+	o.Uid = &v
+}
+
+// GetUrl returns the Url field value
+func (o *CreateWebhook) GetUrl() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Url
+}
+
+// GetUrlOk returns a tuple with the Url field value
+// and a boolean to check if the value has been set.
+func (o *CreateWebhook) GetUrlOk() (*string, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.Url, true
+}
+
+// SetUrl sets field value
+func (o *CreateWebhook) SetUrl(v string) {
+	o.Url = v
+}
+
+func (o CreateWebhook) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Description != nil {
+		toSerialize["description"] = o.Description
+	}
+	if o.Disabled != nil {
+		toSerialize["disabled"] = o.Disabled
+	}
+	if true {
+		toSerialize["eventTypes"] = o.EventTypes
+	}
+	if true {
+		toSerialize["headers"] = o.Headers
+	}
+	if true {
+		toSerialize["metadata"] = o.Metadata
+	}
+	if o.Uid != nil {
+		toSerialize["uid"] = o.Uid
+	}
+	if true {
+		toSerialize["url"] = o.Url
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableCreateWebhook struct {
+	value *CreateWebhook
+	isSet bool
+}
+
+func (v NullableCreateWebhook) Get() *CreateWebhook {
+	return v.value
+}
+
+func (v *NullableCreateWebhook) Set(val *CreateWebhook) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableCreateWebhook) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableCreateWebhook) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableCreateWebhook(val *CreateWebhook) *NullableCreateWebhook {
+	return &NullableCreateWebhook{value: val, isSet: true}
+}
+
+func (v NullableCreateWebhook) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableCreateWebhook) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
