# go/internal/openapi/model_event_type.go
@@ -1,0 +1,120 @@
+/*
+ * Wallet OpenAPI Documentation
+ *
+ * This is a custody wallet service openapi server.
+ *
+ * API version: 1.0
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// EventType the model 'EventType'
+type EventType string
+
+// List of EventType
+const (
+	EVENTTYPE_EventTypeDepositSuccess EventType = "deposit_success"
+	EVENTTYPE_EventTypeWithdrawApproved EventType = "withdraw_approved"
+	EVENTTYPE_EventTypeWithdrawSuccess EventType = "withdraw_success"
+	EVENTTYPE_EventTypeWithdrawFailed EventType = "withdraw_failed"
+	EVENTTYPE_EventTypeTransferApproved EventType = "transfer_approved"
+	EVENTTYPE_EventTypeTransferSuccess EventType = "transfer_success"
+	EVENTTYPE_EventTypeTransferFailed EventType = "transfer_failed"
+)
+
+var allowedEventTypeEnumValues = []EventType{
+	"deposit_success",
+	"withdraw_approved",
+	"withdraw_success",
+	"withdraw_failed",
+	"transfer_approved",
+	"transfer_success",
+	"transfer_failed",
+}
+
+func (v *EventType) UnmarshalJSON(src []byte) error {
+	var value string
+	err := json.Unmarshal(src, &value)
+	if err != nil {
+		return err
+	}
+	enumTypeValue := EventType(value)
+	for _, existing := range allowedEventTypeEnumValues {
+		if existing == enumTypeValue {
+			*v = enumTypeValue
+			return nil
+		}
+	}
+
+	return fmt.Errorf("%+v is not a valid EventType", value)
+}
+
+// NewEventTypeFromValue returns a pointer to a valid EventType
+// for the value passed as argument, or an error if the value passed is not allowed by the enum
+func NewEventTypeFromValue(v string) (*EventType, error) {
+	ev := EventType(v)
+	if ev.IsValid() {
+		return &ev, nil
+	} else {
+		return nil, fmt.Errorf("invalid value '%v' for EventType: valid values are %v", v, allowedEventTypeEnumValues)
+	}
+}
+
+// IsValid return true if the value is valid for the enum, false otherwise
+func (v EventType) IsValid() bool {
+	for _, existing := range allowedEventTypeEnumValues {
+		if existing == v {
+			return true
+		}
+	}
+	return false
+}
+
+// Ptr returns reference to EventType value
+func (v EventType) Ptr() *EventType {
+	return &v
+}
+
+type NullableEventType struct {
+	value *EventType
+	isSet bool
+}
+
+func (v NullableEventType) Get() *EventType {
+	return v.value
+}
+
+func (v *NullableEventType) Set(val *EventType) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableEventType) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableEventType) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableEventType(val *EventType) *NullableEventType {
+	return &NullableEventType{value: val, isSet: true}
+}
+
+func (v NullableEventType) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableEventType) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
